# cs294-green-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: test-and-publish.yml
green_agent/: __init__.py  action_tracker.py  config.py  element_bounds.py  llm_judge.py  osworld_evaluator.py
green_agent/a2a/: __init__.py  controller.py  executor.py  pool_config.py  run.sh  server.py  server_a2a.py  snapshot_manager.py  supabase_storage.py  task_executor.py  vm_manager.py  vm_pool.py
green_agent/tasks_config/chrome/: 15f7d781-a56e-46e9-b815-c5e378f90ce9.json  6d4db1ff-a20e-48e4-9350-c9434c614dec.json  945ae1c5-fc83-4d02-bb1b-5d95cfe4c5b1.json  a0d7e471-e3f8-4b1f-94be-773e6b4102c2.json  fd896fb4-68df-44d6-aad6-d64f5b7d31d7.json  fe6240fb-2fc0-4592-a744-673b04b4e907.json
green_agent/tasks_config/os/: 15454f4c-4452-440b-9122-18311c99ed0e.json  1a425158-626a-42f7-9d2b-11203fb4f83d.json  2a6a93ac-4ce8-4485-ab43-77a46eafadff.json  396d980b-7e34-403e-965d-1cb8dc41b880.json  4b0f8086-6735-4c96-abb4-2b0bafd822d1.json  68592c8f-a272-435f-b342-22c8e81fae02.json  6e2e8f36-c329-4600-a0d7-cf7d413e9b4e.json  734d621f-8a72-4822-a46b-512152426be9.json  78a432ab-ea1e-4ea3-91ed-4b76803dd433.json  bdc0e2fd-e111-43c1-8e4b-739e4816b426.json
src/: server.py
tests/: test_agent.py
