[project]
name = "cs294-green-agent"
version = "1.0.0"
description = "OSWorld Assessment Green Agent - A2A compliant agent for desktop automation benchmarks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core web framework
    "fastapi>=0.121.1",
    "uvicorn>=0.30.6",
    "starlette>=0.27.0",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.19",
    "httpx>=0.28.1",
    "sse-starlette>=1.6.0",

    # A2A protocol SDK
    "a2a-sdk[http-server]>=0.3.20",

    # Image processing
    "Pillow>=10.4.0",

    # Storage
    "sqlite-utils>=3.36",
    "supabase>=2.24.0",

    # Google Cloud
    "google-cloud-compute>=1.19.2",
    "google-cloud-storage>=2.18.2",
    "google-auth>=2.35.0",

    # OSWorld dependencies
    "playwright>=1.49.1",
    "fabric>=3.2.2",
    "requests>=2.32.3",
    "pydrive>=1.3.1",
    "requests-toolbelt>=1.0.0",
    "python-dotenv>=1.2.1",

    # OSWorld utils
    "lxml>=5.3.0",
    "cssselect>=1.2.0",
    "xmltodict>=0.14.2",
    "openpyxl>=3.1.5",
    "formulas>=1.2.9",
    "tldextract>=5.1.3",

    # OSWorld evaluator dependencies
    "pandas>=2.2.3",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "pypdf>=5.1.0",
    "rapidfuzz>=3.10.1",
    "beautifulsoup4>=4.12.3",
    "PyMuPDF>=1.24.14",
    "borb>=2.1.25",
    "pdfplumber>=0.11.4",
    "imagehash>=4.3.1",
    "pydub>=0.25.1",
    "ebooklib>=0.18",
    "mutagen>=1.47.0",

    # Image processing for evaluators
    "opencv-python-headless>=4.12.0.88",
    "scikit-image>=0.25.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "green_agent", "white_agent"]
